started migration to JDK 11. Build with JDK 11 eap + Gradle 5.0